# ImageProcessor

./: .tester.json  CMakeLists.txt  README.md  arg_parser.cpp  arg_parser.h  bmp.cpp  bmp.h  controller.cpp  controller.h  exception.cpp  help.txt  image.cpp  image.h  image_processor.cpp  io.cpp  io.h  readme.md  test.cpp
catch/: catch.hpp
filters/: base_filter.cpp  base_filter.h  blur.cpp  blur.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filter_creator.cpp  filter_creator.h  grayscale.cpp  grayscale.h  matrix.h  negative.cpp  negative.h  pixelize.cpp  pixelize.h  sharpening.cpp  sharpening.h
